update config file